GNOME Bugzilla – Bug 774939
GtkLabelAccessible: Initialize link before setting parent
Last modified: 2016-11-24 00:01:10 UTC
See patch. This fixes a segfault with current at-spi2-atk when a label contains a link.
Created attachment 340618 [details] [review] GtkLabelAccessible: Initialize link before setting parent Since at-spi-atk commit 96621a5e95 fixed PropertyChange notifications for AccessibleParent, setting the parent will result in a call to ref_state_set() which assumes that the object is fully initialized.
Review of attachment 340618 [details] [review]: sure
Attachment 340618 [details] pushed as 593b75f - GtkLabelAccessible: Initialize link before setting parent